# RcoploBot-rs

./: Cargo.toml  README.md
config/: application.yml  botConfig.yml
resources/data/: data.json
resources/image/osu/: test_json.json
resources/tmp/json/: supermarket_group_member.json
src/: error.rs  lib.rs  main.rs
src/api/: api.rs
src/bot/: bot_help.rs  event_handler.rs  mod.rs
src/bot/api/: lolicon.rs  mod.rs  osu_sb.rs
src/bot/module/: ai_module.rs  function_module.rs  group_friend_change_module.rs  mod.rs  osu_sb_module.rs  search_image_module.rs  setu_module.rs  sign_module.rs
src/config/: bot_config.rs  config.rs  mod.rs
src/core/: bot.rs  friend.rs  group.rs  mod.rs  notice.rs  request.rs
src/core/api/: api.rs  api_result.rs  base_api.rs  mod.rs
src/core/component/: cq.rs  event.rs  message.rs  mod.rs
src/core/network/: bot_client.rs  mod.rs
src/domain/: mod.rs
src/domain/mapper/: group_function.rs  mod.rs  setu.rs  sign_group_users.rs
src/domain/table/: mod.rs  tables.rs
src/handler/: bot_help.rs  event_handler.rs  mod.rs
src/handler/api/: lolicon.rs  mod.rs
src/handler/module/: ai_module.rs  bilibili_module.rs  function_module.rs  group_friend_change_module.rs  group_recreational_module.rs  mc_mcsm_module.rs  mc_module.rs  mod.rs  osu_module.rs  osu_sb_module.rs  question_answer_module.rs  search_image_module.rs  setu_module.rs  sign_module.rs
src/service/: group_function_service.rs  mod.rs  setu_service.rs  sign_group_users_service.rs
src/util/: file.rs  http_utils.rs  image_osu_sb.rs  image_utils.rs  mod.rs  regex_utils.rs
