[package]
name = "RcoploBot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions At https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1",features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"

url = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
futures-channel = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
#log
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"

rbs = { version = "0.1"}
rbatis = "4"
rbdc-mysql = "0.1"


reqwest  = { version = "0.11.12", features = ["json"] }

once_cell = "1"
parking_lot = "0.12.1"

rand = "0.8"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]