[package]
name = "RcoploBot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions At https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147",features = ["derive"]}
serde_json = "1.0.87"
serde_yaml = "0.9.14"

url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
futures-util = "0.3.25"
futures-channel = "0.3.25"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
#log
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.0"

rbs = { version = "0.1.12"}
rbatis = "4.0.42"
rbdc-mysql = "0.1.17"


reqwest  = { version = "0.11.12", features = ["json"] }

once_cell = "1.16.0"
parking_lot = "0.12.1"

rand = "0.8.5"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1